conformance/tests/httproute-reference-policy.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferencePolicy
metadata:
  name: reference-policy
  namespace: gateway-conformance-web-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: web-backend
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: reference-policy
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: all-namespaces
  rules:
  - backendRefs:
    - name: web-backend
      namespace: gateway-conformance-web-backend
      port: 8080
